--- a/reserva-cancha-app/src/app/app.component.html
+++ b/reserva-cancha-app/src/app/app.component.html
@@ -1,8 +1,4 @@
-<body>
-  <h1>{{title}}</h1>
-  <nav>
-    <a routerLink="/log-in" routerLinkActive="active">Ingresar</a>
-    <a routerLink="/registrate" routerLinkActive="active">Registrate Ahora!</a>
-  </nav>
+<div id='container'>
+  <!-- <a[routerLink]="/app-first-view" routerLinkActive="active"></a> -->
   <router-outlet></router-outlet>
-</body>
+</div>
