--- a/reserva-cancha-app/src/app/registrate/registrate.component.html
+++ b/reserva-cancha-app/src/app/registrate/registrate.component.html
@@ -1,25 +1,24 @@
   <h2> ¡Sumate y empezá a jugar! </h2>
-  <form (ngSubmit)="onSubmit()" #ingresoForm="ngForm">
+  <form #ingresoForm="ngForm">
     <div class= "form-group">
       <label>Nombre</label>
-      <input type="text" class="form-control" id="mail"
-      [(ngModel)]="model.nombre" name="nombre">
+      <input type="text" class="form-control" id="nombre"
+      [(ngModel)]="persona.nombre" name="nombre">
     </div>
     <div class= "form-group">
       <label>Mail</label>
-      <input type="mail" class="form-control" id="mail" required
-      [(ngModel)]="model.mail" name="mail">
+      <input type="email" class="form-control" id="email"
+      [(ngModel)]="persona.email" name="email">
     </div>
-    <div class= "form-group">
+    <!-- <div class= "form-group">
       <label>Equipo</label>
       <input type="text" class="form-control" id="equipo"
-      [(ngModel)]="model.equipo" name="equipo">
-    </div>
+      [(ngModel)]="persona.equipo" name="equipo">
+    </div> -->
     <div class= "form-group">
       <label>Contraseña</label>
-      <input type="password" class="form-control" id="pass" required
-      [(ngModel)]="model.pass" name="pass">
+      <input type="password" class="form-control" id="clave"
+      [(ngModel)]="persona.clave" name="clave">
     </div>
-    <button type="submit" class="btn btn-success" [disabled]="!ingresoForm.form.valid">Registrarse</button>
+    <button (click)="registracion()" class="btn btn-success" [disabled]="!ingresoForm.form.valid">Registrarse</button>
   </form>
-  {{diagnostic}}
