--- a/reserva-cancha-app/src/styles.css
+++ b/reserva-cancha-app/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+   /*background: url("https://roams.es/c/wp-content/uploads/2016/07/futbol-2000x1218.jpg");*/
+   background-position: top;
+   background-repeat: no-repeat;
+   background-size: cover;
+   background-color: skyblue ;
+}
