commit para clase 0206

--- a/reserva-cancha-app/src/app/log-in/log-in.component.html
+++ b/reserva-cancha-app/src/app/log-in/log-in.component.html
@@ -10,7 +10,7 @@
     <input type="password" class="form-control" id="clave" required
     [(ngModel)]="model.clave" name="clave">
   </div>
-  <button (click)="onSubmit()" >Ingresar</button>
+  <button class="btn btn-default" type="button" (click)="onSubmit()" >Ingresar</button>
 </form>
 <div>
   <label>{{error}}</label>
