--- a/reserva-cancha-app/src/app/cancha-detalle/cancha-detalle.component.html
+++ b/reserva-cancha-app/src/app/cancha-detalle/cancha-detalle.component.html
@@ -1,30 +1,36 @@
 <div *ngIf="cancha">
-  <h2> Agregando campito... </h2>
+  <h2> {{subtitle}} </h2>
+  <div>
+    <label>Nombre</label>
+    <input type="text" id="nombre"
+    [(ngModel)]="cancha.nombre" name="nombre" required>
+  </div>
   <div>
     <label>Tamaño</label>
     <input type="text" id="tamano"
-    [(ngModel)]="cancha.tamano" name="tamano">
+    [(ngModel)]="cancha.tamano" name="tamano" required>
   </div>
   <div>
     <label>Precio por hora</label>
     <input type="number"  id="preciohora"
-    [(ngModel)]="cancha.preciohora" name="preciohora">
+    [(ngModel)]="cancha.preciohora" name="preciohora" required>
   </div>
   <div>
     <label>Jugadores</label>
     <input type="number"  id="jugadores"
-    [(ngModel)]="cancha.jugadores" name="jugadores">
+    [(ngModel)]="cancha.jugadores" name="jugadores" required>
   </div>
   <div>
     <label>Estado</label>
     <input type="text"  id="estado"
-    [(ngModel)]="cancha.estado" name="estado">
+    [(ngModel)]="cancha.estado" name="estado" required>
   </div>
-  <div>
-    <button (click)="goBack()" class="btn btn-success">Volver</button>
+  <div *ngIf="!cancha.id">
     <button (click)="createField()" class="btn btn-success">Crear</button>
   </div>
-</div>
-<div *ngIf="!cancha">
-  hola
+  <div *ngIf="cancha.id">
+    <button (click)="deleteField()" class="btn btn-success">Eliminar</button>
+    <button (click)="updateField()" class="btn btn-success">Aceptar</button>
+  </div>
+  <button (click)="goBack()" class="btn btn-success">Volver</button>
 </div>
