Funciona hasta aca

--- a/reserva-cancha-app/src/app/reserva-cancha/reserva-cancha.component.html
+++ b/reserva-cancha-app/src/app/reserva-cancha/reserva-cancha.component.html
@@ -1,6 +1,8 @@
 <h2>{{subtitle}}</h2>
   <div id='soccer-fields'>
-    <table id= 'field-table'>
+    <table id= 'field-table'
+
+        >
       <thead>
         <tr>
           <th>Nombre</th>
