--- a/reserva-cancha-app/src/app/user/user.component.html
+++ b/reserva-cancha-app/src/app/user/user.component.html
@@ -1,7 +1,7 @@
 <div id='select'>
   <h1>{{title}} {{persona.nombre}}!</h1>
   <div id='logout'>
-    <button (click)="logOutButton()" >Salir</button>
+    <button id='logoutbutton' (click)="logOutButton()" >Salir</button>
   </div>
   <nav>
     <a routerLink="reserva-cancha" routerLinkActive="active">Estado Canchas</a>
