--- a/reserva-cancha-app/src/app/log-in/log-in.component.html
+++ b/reserva-cancha-app/src/app/log-in/log-in.component.html
@@ -2,16 +2,16 @@
 <form #ingresoForm="ngForm">
   <div class= "form-group">
     <label>Mail</label>
-    <input type="email" class="form-control" id="email" required
-    [(ngModel)]="model.email" name="email">
+    <input type="email" class="form-control" id="email"
+    [(ngModel)]="model.email" name="email" required>
   </div>
   <div class= "form-group">
     <label>Contraseña</label>
-    <input type="password" class="form-control" id="clave" required
-    [(ngModel)]="model.clave" name="clave">
+    <input type="password" class="form-control" id="clave"
+    [(ngModel)]="model.clave" name="clave" required>
   </div>
-  <button class="btn btn-default" type="button" (click)="onSubmit()" >Ingresar</button>
+  <button class="btn btn-default" type="button" (click)="onSubmit()" [disabled]="!ingresoForm.form.valid">Ingresar</button>
 </form>
-<div>
-  <label>{{error}}</label>
+<div id="error" *ngIf="!error">
+  {{msj}}
 </div>
