--- a/reserva-cancha-app/src/app/registrate/registrate.component.html
+++ b/reserva-cancha-app/src/app/registrate/registrate.component.html
@@ -3,12 +3,12 @@
     <div class= "form-group">
       <label>Nombre</label>
       <input type="text" class="form-control" id="nombre"
-      [(ngModel)]="persona.nombre" name="nombre">
+      [(ngModel)]="persona.nombre" name="nombre" required>
     </div>
     <div class= "form-group">
       <label>Mail</label>
       <input type="email" class="form-control" id="email"
-      [(ngModel)]="persona.email" name="email">
+      [(ngModel)]="persona.email" name="email" required>
     </div>
     <!-- <div class= "form-group">
       <label>Equipo</label>
@@ -18,7 +18,7 @@
     <div class= "form-group">
       <label>Contraseña</label>
       <input type="password" class="form-control" id="clave"
-      [(ngModel)]="persona.clave" name="clave">
+      [(ngModel)]="persona.clave" name="clave" required>
     </div>
     <button (click)="registracion()" class="btn btn-success" [disabled]="!ingresoForm.form.valid">Enviar</button>
   </form>
